new-infra/modules/network_acg/security_groups.tf
resource "aws_security_group" "vpcendpoints" {
  vpc_id = data.aws_vpc.main.id
  name   = "${local.name_prefix}-vpc-endpoint"

  ingress {
    description = "Allow HTTPS Inbound From VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [var.vpc_cidr]

  }
  egress {
    description = "Allow all for egress"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = merge(var.tags, {
    Name = "${local.name_prefix}-vpc-endpoint"
  })
}
